--- a/exercises/juggle-garden/index.html
+++ b/exercises/juggle-garden/index.html
@@ -14,11 +14,11 @@
     <script src="js/libraries/p5.sound.min.js"></script>
 
     <!-- My script(s) -->
+    <script src="js/Weed.js"></script>
     <script src="js/Bee.js"></script>
     <script src="js/Flower.js"></script>
     <script src="js/Paddle.js"></script>
     <script src="js/script.js"></script>
-    <script src="js/Weedkiller.js"></script>
   </head>
 
   <body>
