--- a/projects/project2 prototype/index.html
+++ b/projects/project2 prototype/index.html
@@ -15,6 +15,7 @@
   <script src="js/libraries/p5.sound.min.js"></script>
 
   <!-- My script(s) -->
+  <script src="js/Note.js"></script>
   <script src="js/Door.js"></script>
   <script src="js/Platform.js"></script>
   <script src="js/Player.js"></script>
