--- a/projects/project2-prototype2/index.html
+++ b/projects/project2-prototype2/index.html
@@ -15,6 +15,7 @@
   <script src="js/libraries/p5.sound.min.js"></script>
 
   <!-- My script(s) -->
+  <!-- <script src="js/Street.js"></script> -->
   <script src="js/House.js"></script>
   <script src="js/Creature.js"></script>
   <script src="js/Player.js"></script>
