--- a/projects/oop-states-no-inheritance/index.html
+++ b/projects/oop-states-no-inheritance/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="">
 
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <title>E6: Longing (But with Sound)</title>
+  <title>OOP States</title>
 
   <!-- CSS stylesheet(s) -->
   <link rel="stylesheet" type="text/css" href="css/style.css" />
@@ -15,12 +15,12 @@
   <script src="js/libraries/p5.sound.min.js"></script>
 
   <!-- My script(s) -->
-  <!-- <script src="js/Level1.js"></script>
-  <script src="js/Title.js"></script> -->
-  <script src="js/House.js"></script>
-  <script src="js/Creature.js"></script>
-  <script src="js/Player.js"></script>
+  <!-- Note that the state classes need to be BEFORE the script because the script relies on them -->
+  <script src="js/Title.js"></script>
+  <script src="js/Animation.js"></script>
+  <script src="js/Ending.js"></script>
   <script src="js/script.js"></script>
+
 </head>
 
 <body>
