--- a/exercises/make-some-noise/index.html
+++ b/exercises/make-some-noise/index.html
@@ -19,7 +19,7 @@
   <script src="js/Title.js"></script>
   <script src="js/House.js"></script>
   <script src="js/Creature.js"></script>
-  <script src="js/Player.js"></script>
+  <!-- <script src="js/Player.js"></script> -->
   <script src="js/script.js"></script>
 </head>
 
