--- a/exercises/make-some-noise/index.html
+++ b/exercises/make-some-noise/index.html
@@ -15,11 +15,9 @@
   <script src="js/libraries/p5.sound.min.js"></script>
 
   <!-- My script(s) -->
-  <script src="js/Level1.js"></script>
-  <script src="js/Title.js"></script>
   <script src="js/House.js"></script>
   <script src="js/Creature.js"></script>
-  <!-- <script src="js/Player.js"></script> -->
+  <script src="js/Player.js"></script>
   <script src="js/script.js"></script>
 </head>
 
