--- a/projects/project2/index.html
+++ b/projects/project2/index.html
@@ -15,6 +15,8 @@
   <script src="js/libraries/p5.sound.min.js"></script>
 
   <!-- My script(s) -->
+  <script src="js/Level2.js"></script>
+  <script src="js/Note1.js"></script>
   <script src="js/Level1.js"></script>
   <script src="js/Title.js"></script>
   <script src="js/House.js"></script>
