P2: Made a food class

--- a/projects/project2/index.html
+++ b/projects/project2/index.html
@@ -21,6 +21,7 @@
   <script src="js/Note1.js"></script>
   <script src="js/Level1.js"></script>
   <script src="js/Title.js"></script>
+  <script src="js/Food.js"></script>
   <script src="js/Flower.js"></script>
   <script src="js/House.js"></script>
   <script src="js/Creature.js"></script>
