--- a/projects/project2/index.html
+++ b/projects/project2/index.html
@@ -15,6 +15,7 @@
   <script src="js/libraries/p5.sound.min.js"></script>
 
   <!-- My script(s) -->
+  <script src="js/Note3.js"></script>
   <script src="js/Level3.js"></script>
   <script src="js/Note2.js"></script>
   <script src="js/Level2.js"></script>
