--- a/projects/project2/index.html
+++ b/projects/project2/index.html
@@ -15,6 +15,8 @@
   <script src="js/libraries/p5.sound.min.js"></script>
 
   <!-- My script(s) -->
+  <script src="js/Note5.js"></script>
+  <script src="js/Note4.js"></script>
   <script src="js/Level4.js"></script>
   <script src="js/Note3.js"></script>
   <script src="js/Level3.js"></script>
@@ -23,6 +25,7 @@
   <script src="js/Note1.js"></script>
   <script src="js/Level1.js"></script>
   <script src="js/Title.js"></script>
+  <script src="js/Realization.js"></script>
   <script src="js/Food.js"></script>
   <script src="js/Flower.js"></script>
   <script src="js/House.js"></script>
