P2: Creating a stranger class but it is not truly done

--- a/projects/project2/index.html
+++ b/projects/project2/index.html
@@ -25,6 +25,7 @@
   <script src="js/Note1.js"></script>
   <script src="js/Level1.js"></script>
   <script src="js/Title.js"></script>
+  <script src="js/Stranger.js"></script>
   <script src="js/Realization.js"></script>
   <script src="js/Food.js"></script>
   <script src="js/Flower.js"></script>
